--- a/pom.xml
+++ b/pom.xml
@@ -15,24 +15,12 @@
 	<description>Spring Boot backend app for CrickScores</description>
 	<properties>
 		<java.version>17</java.version>
+   		<spring-shell.version>3.1.6</spring-shell.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-    		<groupId>org.springframework.boot</groupId>
-    		<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -70,5 +58,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 </project>
